# highdeas

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: merge-gate.yml
docs/: ios-app-handoff.md
src/highdeas/: app.py  drive_write.py  routers.py  service.py  store.py  transcribe.py  web.py  window_state.py
src/highdeas/static/: app.css  editor.js  find.js  inbox.js
src/highdeas/templates/: base.html  bin.html  editor.html  icons.html  inbox.html  rows.html
src/voicememo/: __init__.py  app.py  ingest.py  service.py  store.py  transcribe.py  web.py
tests/: conftest.py  test_app.py  test_drive_write.py  test_ingest.py  test_routers.py  test_service.py  test_store.py  test_transcribe.py  test_web.py  test_window_state.py
