[project]
name = "highdeas"
version = "0.1.0"
description = "Local pipeline that ingests iPhone voice-memo recordings, transcribes them locally, and routes each to Notesnook or Google Drive."
requires-python = ">=3.11"
dependencies = [
    "flask>=3",
    "pywebview>=5",
    "requests>=2",
    "python-dotenv>=1",
    "python-docx>=1",
    "onnx-asr[cpu,hub]>=0.11",
    "imageio-ffmpeg>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.package-data]
highdeas = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
