[project]
name = "highdeas"
version = "0.1.0"
description = "Local pipeline that ingests iPhone voice-memo recordings, transcribes them locally, and routes each to Notesnook or Google Drive."
requires-python = ">=3.11"
# Each machine installs this list itself: a pull that moves this file runs pip into
# that checkout's virtualenv before relaunching (see update.py).
dependencies = [
    "flask>=3",
    "pywebview>=5",
    "requests>=2",
    "python-dotenv>=1",
    "python-docx>=1",
    "onnx-asr[cpu,hub]>=0.11",
    # Already onnx-asr's own, but transcribe.py hands the model a recording a piece at
    # a time (see HEARABLE_SECONDS) and slices those pieces itself, so it is ours too.
    "numpy>=1.26",
    "imageio-ffmpeg>=0.4",
    # Signs the read of the names sheet, and the Drive subfolder-link lookup, as a
    # service account. Optional in practice: a machine without it falls back to the
    # names it last saw, and to the static top-level Drive folder link.
    "google-auth>=2.30",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.package-data]
highdeas = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
# "scripts" (not just "src"): scripts/backfill_drive_subfolders.py is a standalone
# tool, not part of the highdeas package, but its tests import it directly the same
# way tests import highdeas — no install, no package prefix.
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
